--- a/osuReplayAPI/osuReplayAPI/osu!ReplayAPI.csproj
+++ b/osuReplayAPI/osuReplayAPI/osu!ReplayAPI.csproj
@@ -28,7 +28,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\o!RA\DLLs\</OutputPath>
+    <OutputPath>..\..\DLLs\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
