--- a/o!RAResources/o!RAResources.csproj
+++ b/o!RAResources/o!RAResources.csproj
@@ -99,6 +99,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Resources\Player_Start.png" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\default_approachcircle.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
